<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newhdc.pedergb.pushpeng.MainActivity"
    android:background="@color/colorBackground">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:stretchColumns="*"
        android:id="@+id/tableForButtons"
        android:layout_above="@+id/buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp">

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableForButtons"
        android:layout_centerHorizontal="true"
        android:text="@string/up"
        android:backgroundTint="@color/colorButton"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:backgroundTint="@color/colorButton"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:backgroundTint="@color/colorButton"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:backgroundTint="@color/colorButton"
        android:layout_marginBottom="15dp"
        android:layout_alignBottom="@+id/buttons"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/colorButton"
        android:text="Reset"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Main Menu"
        android:textSize="12sp"
        android:backgroundTint="@color/colorButton"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btMainMenu"
        android:layout_toEndOf="@+id/btReset"
        android:layout_toRightOf="@+id/btReset"
        android:layout_toLeftOf="@+id/btMainMenu"
        android:layout_toStartOf="@+id/btMainMenu"
        />

</RelativeLayout>
